--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -4,18 +4,18 @@
   "menu.minez_help.title": "MineZ Help Menu",
   "menu.minez_help.input_label": "Text:",
   "menu.minez_help.button1": "Getting Started",
-  "menu.minez_help.button2": "Locations",
-  "menu.minez_help.button3": "Items",
-  "menu.minez_help.button4": "Loot Chests",
-  "menu.minez_help.button5": "Achievements",
-  "menu.minez_help.button6": "Spawn Kit",
+  "menu.minez_help.button2": "Thirst & Visibility",
+  "menu.minez_help.button3": "Healing",
+  "menu.minez_help.button4": "Bleeding & Infection",
+  "menu.minez_help.button5": "Spawn Kit",
+  "menu.minez_help.button6": "Mobs",
   "menu.minez_help.button7": "Grave Robbing & Fishing",
-  "menu.minez_help.button8": "Mobs",
-  "menu.minez_help.button9": "Lore",
-  "menu.minez_help.button10": "Healing",
-  "menu.minez_help.button11": "Thirst & Visibility",
-  "menu.minez_help.button12": "Bleeding & Infection",
-  "menu.minez_help.description": "This is a sample description in the help menu! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volupta",
+  "menu.minez_help.button8": "Loot Chests",
+  "menu.minez_help.button9": "Locations",
+  "menu.minez_help.button10": "Items",
+  "menu.minez_help.button11": "Achievements",
+  "menu.minez_help.button12": "Lore",
+  "menu.minez_help.description": "This is a sample description in the help menu! /n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volupta",
   "menu.minez_help.webmap": "MineZ Map",
   "menu.minez_help.wiki": "MineZ Wiki",
   "menu.minez_help.close": "Close"
