--- a/src/main/resources/assets/minez-help-menu/lang/pl_pl.json
+++ b/src/main/resources/assets/minez-help-menu/lang/pl_pl.json
@@ -2,7 +2,7 @@
   "category.minez_help_menu": "MineZ Help Menu",
   "key.minez_help_menu.open_gui": "Otwórz menu",
   "menu.minez_help.title": "Menu Pomocy MineZ",
-  "menu.minez_help.input_label": "Wprowadź dane:",
+  "menu.minez_help.input_label": "Szukaj Informacje:",
   "menu.minez_help.button1": "Getting Started",
   "menu.minez_help.button2": "Thirst & Visibility",
   "menu.minez_help.button3": "Healing",
@@ -10,12 +10,15 @@
   "menu.minez_help.button5": "Spawn Kit",
   "menu.minez_help.button6": "Mobs",
   "menu.minez_help.button7": "Grave Robbing & Fishing",
-  "menu.minez_help.button8": "Loot Chests",
-  "menu.minez_help.button9": "Locations",
-  "menu.minez_help.button10": "Items",
-  "menu.minez_help.button11": "Achievements",
-  "menu.minez_help.button12": "Lore",
-  "menu.minez_help.description": "To jest przykładowy opis w menu pomocy!",
+  "menu.minez_help.button8": "Locations",
+  "menu.minez_help.button9": "Loot Chests",
+  "menu.minez_help.button10": "Dungeons",
+  "menu.minez_help.button11": "Items",
+  "menu.minez_help.button12": "Recipes",
+  "menu.minez_help.button13": "Achievements",
+  "menu.minez_help.button14": "Lore",
+  "menu.minez_help.menu1.title": "Getting Started To MineZ",
+  "menu.minez_help.description": "• MineZ to gra o apokalipsie zombie, więc czekają na ciebie hordy zombie i inne stworzenia jak zombie pigmeni i wilki! ...\n• Poziom doświadczenia to twój poziom pragnienia. 20 to maksymalny poziom nawodnienia – nie pozwól mu spaść do 0, bo umrzesz z odwodnienia!...\n• Pasek doświadczenia pokazuje, jak bardzo jesteś widoczny dla zombie. Im większa widoczność, tym łatwiej cię zauważą!... itd.",
   "menu.minez_help.webmap": "MineZ Map",
   "menu.minez_help.wiki": "MineZ Wiki",
   "menu.minez_help.close": "Zamknij"
