--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -10,15 +10,16 @@
   "menu.minez_help.button5": "Spawn Kit",
   "menu.minez_help.button6": "Mobs",
   "menu.minez_help.button7": "Grave Robbing & Fishing",
-  "menu.minez_help.button8": "Locations",
-  "menu.minez_help.button9": "Loot Chests",
-  "menu.minez_help.button10": "Dungeons",
-  "menu.minez_help.button11": "Items",
-  "menu.minez_help.button12": "Recipes",
-  "menu.minez_help.button13": "Achievements",
-  "menu.minez_help.button14": "Lore",
+  "menu.minez_help.button8": "Mining & Component Bags",
+  "menu.minez_help.button9": "Recipes",
+  "menu.minez_help.button10": "Items",
+  "menu.minez_help.button11": "Locations",
+  "menu.minez_help.button12": "Dungeons",
+  "menu.minez_help.button13": "Loot Chests",
+  "menu.minez_help.button14": "Achievements",
+  "menu.minez_help.button15": "Lore",
   "menu.minez_help.menu1.title": "Getting Started To MineZ",
-  "menu.minez_help.description": "• MineZ is a zombie apocalypse game, so horde of zombies and some zombie-ish mobs such as zombie pigmen and wolves await! There may be other more terrifying creatures out there, though...\n\n• The experience level is your thirst level. 20 is the maximum amount of hydration you can have, but don't let it get to 0 otherwise you will start to dehydrate and die! You can only replenish it by drinking from your water bottle. For long journeys, it may be wiser to carry more than one water bottle and refill it in every town with water. Drink a water bottle ONLY when your thirst level is between 3-0.\n\n• The experience bar is the zombies' visibility level on you. The higher your visibility, the further and easier can a zombie spot you! You can sneak to keep your visibility to a minimum, but sprinting (even in water) and jumping will greatly increase your visibility and make you an easier target for zombies!\n\n• In MineZ the zombies are faster, stronger and smarter than the ones you can find in Vanilla Minecraft. They are as fast as a sprinting person, but if they lose sight of you they find go back to your previous location to trap you.\n\n• Chatting System is also modified. You don't hear others if you are more than 250m from a player.\n\n• To communicate with other players in the global chat, use the radio (eye of ender), and tune it to the desired channel, such as 89.9, as an example.\n\n• Spawn into the world by using a Zombie Head on your hand. (Premium users can choose Spawnpoint from #1 to #40 as they want.) When you first spawn, you will spawn with a water bottle, a wooden sword, and a bandage.\n\n• You can buy other things with XP on the XP Shop to add to your Spawn Kit (e.g speed pot, arrows, bow, 4 cookies etc.) as well as getting them from achievements.",
+  "menu.minez_help.description.gettingstarted": "• MineZ is a zombie apocalypse game, so horde of zombies and some zombie-ish mobs such as zombie pigmen and wolves await! There may be other more terrifying creatures out there, though...\n\n• The experience level is your thirst level. 20 is the maximum amount of hydration you can have, but don't let it get to 0 otherwise you will start to dehydrate and die! You can only replenish it by drinking from your water bottle. For long journeys, it may be wiser to carry more than one water bottle and refill it in every town with water. Drink a water bottle ONLY when your thirst level is between 3-0.\n\n• The experience bar is the zombies' visibility level on you. The higher your visibility, the further and easier can a zombie spot you! You can sneak to keep your visibility to a minimum, but sprinting (even in water) and jumping will greatly increase your visibility and make you an easier target for zombies!\n\n• In MineZ the zombies are faster, stronger and smarter than the ones you can find in Vanilla Minecraft. They are as fast as a sprinting person, but if they lose sight of you they find go back to your previous location to trap you.\n\n• Chatting System is also modified. You don't hear others if you are more than 250m from a player.\n\n• To communicate with other players in the global chat, use the radio (eye of ender), and tune it to the desired channel, such as 89.9, as an example.\n\n• Spawn into the world by using a Zombie Head on your hand. (Premium users can choose Spawnpoint from #1 to #40 as they want.) When you first spawn, you will spawn with a water bottle, a wooden sword, and a bandage.\n\n• You can buy other things with XP on the XP Shop to add to your Spawn Kit (e.g speed pot, arrows, bow, 4 cookies etc.) as well as getting them from achievements.",
   "menu.minez_help.webmap": "MineZ Map",
   "menu.minez_help.wiki": "MineZ Wiki",
   "menu.minez_help.close": "Close"
