--- a/src/main/resources/assets/minez-help-menu/lang/pl_pl.json
+++ b/src/main/resources/assets/minez-help-menu/lang/pl_pl.json
@@ -10,15 +10,16 @@
   "menu.minez_help.button5": "Spawn Kit",
   "menu.minez_help.button6": "Mobs",
   "menu.minez_help.button7": "Grave Robbing & Fishing",
-  "menu.minez_help.button8": "Locations",
-  "menu.minez_help.button9": "Loot Chests",
-  "menu.minez_help.button10": "Dungeons",
-  "menu.minez_help.button11": "Items",
-  "menu.minez_help.button12": "Recipes",
-  "menu.minez_help.button13": "Achievements",
-  "menu.minez_help.button14": "Lore",
+  "menu.minez_help.button8": "Mining & Component Bags",
+  "menu.minez_help.button9": "Recipes",
+  "menu.minez_help.button10": "Items",
+  "menu.minez_help.button11": "Locations",
+  "menu.minez_help.button12": "Dungeons",
+  "menu.minez_help.button13": "Loot Chests",
+  "menu.minez_help.button14": "Achievements",
+  "menu.minez_help.button15": "Lore",
   "menu.minez_help.menu1.title": "Getting Started To MineZ",
-  "menu.minez_help.description": "• MineZ to gra o apokalipsie zombie, więc czekają na ciebie hordy zombie i inne stworzenia jak zombie pigmeni i wilki! ...\n• Poziom doświadczenia to twój poziom pragnienia. 20 to maksymalny poziom nawodnienia – nie pozwól mu spaść do 0, bo umrzesz z odwodnienia!...\n• Pasek doświadczenia pokazuje, jak bardzo jesteś widoczny dla zombie. Im większa widoczność, tym łatwiej cię zauważą!... itd.",
+  "menu.minez_help.description.gettingstarted": "• MineZ to gra o apokalipsie zombie, więc czekają na ciebie hordy zombie i inne stworzenia jak zombie pigmeni i wilki! ...\n• Poziom doświadczenia to twój poziom pragnienia. 20 to maksymalny poziom nawodnienia – nie pozwól mu spaść do 0, bo umrzesz z odwodnienia!...\n• Pasek doświadczenia pokazuje, jak bardzo jesteś widoczny dla zombie. Im większa widoczność, tym łatwiej cię zauważą!... itd.",
   "menu.minez_help.webmap": "MineZ Map",
   "menu.minez_help.wiki": "MineZ Wiki",
   "menu.minez_help.close": "Zamknij"
