--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -18,11 +18,36 @@
   "menu.minez_help.button13": "Loot Chests",
   "menu.minez_help.button14": "Achievements",
   "menu.minez_help.button15": "Lore",
-  "menu.minez_help.menu1.title1": "Getting Started To MineZ:",
-  "menu.minez_help.menu1.title2": "Types of Players:",
+  "menu.minez_help.menu1.title": "Getting Started To MineZ:",
   "menu.minez_help.menu2.title": "Hunger, Thirst & Visibility",
+  "menu.minez_help.menu3.title": "Healing",
+  "menu.minez_help.menu4.title": "Bleeding & Infection",
+  "menu.minez_help.menu5.title": "Spawn Kit",
+  "menu.minez_help.menu6.title": "Mobs",
+  "menu.minez_help.menu7.title": "Grave Robbing & Fishing",
+  "menu.minez_help.menu8.title": "Mining & Component Bags",
+  "menu.minez_help.menu9.title": "Recipes",
+  "menu.minez_help.menu10.title": "Items",
+  "menu.minez_help.menu11.title": "Locations",
+  "menu.minez_help.menu12.title": "Dungeons",
+  "menu.minez_help.menu13.title": "Loot Chests",
+  "menu.minez_help.menu14.title": "Achievements",
+  "menu.minez_help.menu15.title": "Lore",
   "menu.minez_help.description.gettingstarted": "§lThe Basics:\n\n§f§l•§f MineZ is a zombie apocalypse game, so horde of zombies and some zombie-ish mobs such as zombie pigmen and wolves await! There may be other more terrifying creatures out there.\n\n§l•§f The experience level is your thirst level. 25 is the maximum amount of hydration you can have, but don't let it get to 0 otherwise you will start to dehydrate and die! You can only replenish it by drinking from your water bottle or by eating.\nFor long journeys, it may be wiser to carry more than one water bottle and refill it in every town with water. We recommend drink a water bottle when your thirst level is between 2-0.\n\n§l•§f The experience bar is the zombies' visibility level on you. The higher your visibility, the further and easier can a zombie spot you! You can sneak to keep your visibility to a minimum, but sprinting (even in water) and jumping will greatly increase your visibility and make you an easier target for zombies!\n\n§l•§f In MineZ the zombies are faster, stronger and smarter than the ones you can find in Vanilla Minecraft. They are as fast as a sprinting person, but if they lose sight of you they find go back to your previous location to trap you.\n\n§l•§f Chatting System is also modified. It is divided into Local and Global. Local shows player messages at a distance of 250m and less from you. Global displays all messages when the player uses ! At the beginning of their message.\n\n§l•§f Spawn into the world by Talking to the NPC next to the fountain. When you first spawn, you will spawn with a water bottle, a wooden sword, and a bandage.\n\n§l•§f You can buy other things with XP on the XP Shop to add to your Spawn Kit as well as getting them from achievements.\n\n§l•§f Playing on MineZ you have two types of servers to choose from PVP and PVE. PVE servers are only for players who buy a rank on the server's website. PVP servers, also called Public, also have a small part of the map with PVE, this is an area up to Z= -100, then there is a PVP zone.\n\n\n§lTypes of Players:\n  §l•§f §cBandits §fare players that will kill anyone else on sight. They are categorized into several types: Leather Bandits, Iron Roamers, Tricksters and Massacre Teams. Leather Bandits are newly spawned bandits that hit anyone in sight despite having poor gear. Iron Roamers are iron-clad bandits that wander around the map, killing usually to obtain health potions. Tricksters are bandits who pretend to befriend you before killing you. Massacre Teams are small groups of well-armed bandits that loot town by town. They can easil noy be spotted with sprinting players, clans of iron bandits and large slews of death messages appearing on the chat as they battle other groups of players.\n\n  §l•§f §aHealers§f are players that do not attack people on sight, but rather heal them and supply them with food, armor, gear etc. to send them on their way. However, do not let this facade of a friendly player fool you -occasionally, healers may be luring people with low health to them so they may kill them, as well as the fact that if you plan on becoming a healer, people may see you as a lesser-defended target and hunt you down. Healers that have healed 16 different people will have the Healer tag as a sign to others that they are reliable healers to trust.\n\n\n§lBasic Tips for Surviving:\n  §l•§f It may be very useful for you to use the MineZ Map: This map of MineZ will show you the coordinates of all locations, where the chests are and what type of chest are they and information on all locations, including warnings and zombie spawn rates.\n\n  §l•§f Before heading North it is extremely important that you have at least more than one water bottle and stock up on food as long journeys will consume a lot of water and hunger. Do not start heading North until you have obtained both of those.\n\n  §l•§f If a group of zombies spawn within a relatively close proximity to you, try to sneak to lower your visibility and keep your chances of getting spotted to the bare minimum.\n\n  §l•§f In every town you go to that has a water source, refill your water bottles, drink from it and then refill it again as your first priority. Then, after you are done looting refill it, drink it and refill it back. This will ensure that you never run out of water or take any unnecessary damage from dehydration.",
   "menu.minez_help.description.thirstvisibility": "Thirst and Visibility are mechanics added in to MineZ that are not found in Vanilla Minecraft. Unlike bleeding and infection, these mechanics cannot be remedied or removed, but their effect can be delayed or reduced. See the categories below for additional information about the mechanics.",
+  "menu.minez_help.description.healing": "Healing",
+  "menu.minez_help.description.bleedinginfection": "Bleeding & Infection",
+  "menu.minez_help.description.spawnkit": "Spawn Kit",
+  "menu.minez_help.description.mobs": "Mobs",
+  "menu.minez_help.description.graverobbingfishing": "Grave Robbing & Fishing",
+  "menu.minez_help.description.miningcomponentbags": "Mining & Component Bags",
+  "menu.minez_help.description.recipes": "Recipes",
+  "menu.minez_help.description.items": "Items",
+  "menu.minez_help.description.locations": "Locations",
+  "menu.minez_help.description.dungeons": "Dungeons",
+  "menu.minez_help.description.lootchests": "Loot Chests",
+  "menu.minez_help.description.achievements": "Achievements",
+  "menu.minez_help.description.lore": "Lore",
   "menu.minez_help.pageback": "Previous page",
   "menu.minez_help.next": "Next page",
   "menu.minez_help.webmap": "MineZ Map",
