--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "category.minez_help_menu": "MineZ Help Menu",
   "key.minez_help_menu.open_gui": "Open Gui",
+  "key.minez_help_menu.open_settings_gui": "Open Settings",
   "menu.minez_help.title": "MineZ Help Menu",
   "menu.minez_help.input_label": "Search for information:",
   "menu.minez_help.button1": "Getting Started",
