--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -4,6 +4,7 @@
   "key.minez_help_menu.open_settings_gui": "Open Settings",
   "menu.minez_help.title": "MineZ Help Menu",
   "menu.minez_help.input_label": "Search for information:",
+
   "menu.minez_help.button1": "Getting Started",
   "menu.minez_help.button2": "Hunger, Thirst & Visibility",
   "menu.minez_help.button3": "Healing",
@@ -19,6 +20,7 @@
   "menu.minez_help.button13": "Loot Chests",
   "menu.minez_help.button14": "Achievements",
   "menu.minez_help.button15": "Lore",
+
   "menu.minez_help.menu1.title": "Getting Started To MineZ:",
   "menu.minez_help.menu2.title": "Hunger, Thirst & Visibility",
   "menu.minez_help.menu3.title": "Healing",
@@ -34,8 +36,9 @@
   "menu.minez_help.menu13.title": "Loot Chests",
   "menu.minez_help.menu14.title": "Achievements",
   "menu.minez_help.menu15.title": "Lore",
+
   "menu.minez_help.description.gettingstarted": "§lThe Basics:\n\n§f§l•§f MineZ is a zombie apocalypse game, so horde of zombies and some zombie-ish mobs such as zombie pigmen and wolves await! There may be other more terrifying creatures out there.\n\n§l•§f The experience level is your thirst level. 25 is the maximum amount of hydration you can have, but don't let it get to 0 otherwise you will start to dehydrate and die! You can only replenish it by drinking from your water bottle or by eating.\nFor long journeys, it may be wiser to carry more than one water bottle and refill it in every town with water. We recommend drink a water bottle when your thirst level is between 2-0.\n\n§l•§f The experience bar is the zombies' visibility level on you. The higher your visibility, the further and easier can a zombie spot you! You can sneak to keep your visibility to a minimum, but sprinting (even in water) and jumping will greatly increase your visibility and make you an easier target for zombies!\n\n§l•§f In MineZ the zombies are faster, stronger and smarter than the ones you can find in Vanilla Minecraft. They are as fast as a sprinting person, but if they lose sight of you they find go back to your previous location to trap you.\n\n§l•§f Chatting System is also modified. It is divided into Local and Global. Local shows player messages at a distance of 250m and less from you. Global displays all messages when the player uses ! At the beginning of their message.\n\n§l•§f Spawn into the world by Talking to the NPC next to the fountain. When you first spawn, you will spawn with a water bottle, a wooden sword, and a bandage.\n\n§l•§f You can buy other things with XP on the XP Shop to add to your Spawn Kit as well as getting them from achievements.\n\n§l•§f Playing on MineZ you have two types of servers to choose from PVP and PVE. PVE servers are only for players who buy a rank on the server's website. PVP servers, also called Public, also have a small part of the map with PVE, this is an area up to Z= -100, then there is a PVP zone.\n\n\n§lTypes of Players:\n  §l•§f §cBandits §fare players that will kill anyone else on sight. They are categorized into several types: Leather Bandits, Iron Roamers, Tricksters and Massacre Teams. Leather Bandits are newly spawned bandits that hit anyone in sight despite having poor gear. Iron Roamers are iron-clad bandits that wander around the map, killing usually to obtain health potions. Tricksters are bandits who pretend to befriend you before killing you. Massacre Teams are small groups of well-armed bandits that loot town by town. They can easil noy be spotted with sprinting players, clans of iron bandits and large slews of death messages appearing on the chat as they battle other groups of players.\n\n  §l•§f §aHealers§f are players that do not attack people on sight, but rather heal them and supply them with food, armor, gear etc. to send them on their way. However, do not let this facade of a friendly player fool you -occasionally, healers may be luring people with low health to them so they may kill them, as well as the fact that if you plan on becoming a healer, people may see you as a lesser-defended target and hunt you down. Healers that have healed 16 different people will have the Healer tag as a sign to others that they are reliable healers to trust.\n\n\n§lBasic Tips for Surviving:\n  §l•§f It may be very useful for you to use the MineZ Map: This map of MineZ will show you the coordinates of all locations, where the chests are and what type of chest are they and information on all locations, including warnings and zombie spawn rates.\n\n  §l•§f Before heading North it is extremely important that you have at least more than one water bottle and stock up on food as long journeys will consume a lot of water and hunger. Do not start heading North until you have obtained both of those.\n\n  §l•§f If a group of zombies spawn within a relatively close proximity to you, try to sneak to lower your visibility and keep your chances of getting spotted to the bare minimum.\n\n  §l•§f In every town you go to that has a water source, refill your water bottles, drink from it and then refill it again as your first priority. Then, after you are done looting refill it, drink it and refill it back. This will ensure that you never run out of water or take any unnecessary damage from dehydration.",
-  "menu.minez_help.description.thirstvisibility": "Thirst and Visibility are mechanics added in to MineZ that are not found in Vanilla Minecraft. Unlike bleeding and infection, these mechanics cannot be remedied or removed, but their effect can be delayed or reduced. See the categories below for additional information about the mechanics.",
+  "menu.minez_help.description.thirstvisibility": "Thirst and Visibility are mechanics added in to MineZ that are not found in Vanilla Minecraft. Unlike bleeding and infection, these mechanics cannot be remedied or removed, but their effect can be delayed or reduced. See the categories below for additional information about the mechanics.\n\n\n§lThirst:\n  §l•§f Thirst is an added mechanic similar to Hunger. It is indicated by the number of levels you have above your visibility (experience) bar, with 25 representing full. Over time, a player's thirst will drain, taking approximately 15 minutes to fully deplete. Thirst will always deplete over time, whether you're moving or not, so it is not recommended to remain idle for long periods of time.\n\n  §l•§f Should you reach 0 thirst, you will begin taking a heart of damage every second until you either drink some water or die of dehydration.\n\n  §l•§f The most known way to restore your thirst is to drink a water bottle. Drinking water will always bring your thirst back to 20, so it is recommended you only drink when next to a water source or while your thirst is less than 3. Always be sure to keep extra water bottles on hand as many areas do not have a source near them. The water bottle is a default item on the spawn kit for a MineZ player.\n\n  §l•§f There are also other ways of bringing your thirst level up such as consuming various fresh foods like carrots or melons.\n\n\n§lFresh Water:\n  §l•§f Fresh Water is obtained by filling your water bottle from a source like a cauldron or by boiling a regular bottle of water in a furnace, instead of taking it straight from a well or ocean. Drinking Fresh Water will enable you to enjoy 25 thirst and half a heart of regeneration.\n\n\n§lHunger:\n  §l•§f Hunger in MineZ works very similarly to Vanilla Hunger even though some of the variables such as the saturation or nutritional values differ from Minecraft’s default ones. Below you will find a table with a full list of values they are also visible in the descriptions of items.\n\n\n§lVisibility:\n  §l•§f Visibility is represented by the exper.ience bar shows the range at which a mob will be able to 'hear' you or detect you. The higher the bar goes, the wider your detection range becomes. Movement will make the bar go up. Standing still while crouching will produce the least amount of sound, while sprint-jumping will produce the most sound. At night time, your visibility will decrease by a small amount. Certain items can make a lot of noise, such as Snowballs and Grenades, which are useful for either drawing attention to or away from you.\n\n  §l•§f Other items, such as the Zombie Head can lower your visibility, or eliminate it completely. For escaping from zombies, it is recommended to throw a snowball at your feet as it will 'stun' the zombies for a brief moment, giving you enough time to get away. Shovels also work similarly. If you hit a zombie with a shovel it will stun them for 4 seconds.\n\n\n\n§lFood variables table:\n\n",
   "menu.minez_help.description.healing": "Healing",
   "menu.minez_help.description.bleedinginfection": "Bleeding & Infection",
   "menu.minez_help.description.spawnkit": "Spawn Kit",
@@ -53,5 +56,185 @@
   "menu.minez_help.next": "Next page",
   "menu.minez_help.webmap": "MineZ Map",
   "menu.minez_help.wiki": "MineZ Wiki",
-  "menu.minez_help.close": "Close"
+  "menu.minez_help.close": "Close",
+  "menu.minez_help.thirst_table.headers[0]": "Item",
+  "menu.minez_help.thirst_table.headers[1]": "Hunger",
+  "menu.minez_help.thirst_table.headers[2]": "Hunger",
+  "menu.minez_help.thirst_table.headers[3]": "Stack",
+  "menu.minez_help.thirst_table.headers[4]": "Thirst",
+  "menu.minez_help.thirst_table.headers[5]": "Way of getting it",
+  "menu.minez_help.thirst_table.rows[0][0]": "Apple",
+  "menu.minez_help.thirst_table.rows[0][1]": "3",
+  "menu.minez_help.thirst_table.rows[0][2]": "2",
+  "menu.minez_help.thirst_table.rows[0][3]": "2",
+  "menu.minez_help.thirst_table.rows[0][4]": "+2",
+  "menu.minez_help.thirst_table.rows[0][5]": "Loot",
+  "menu.minez_help.thirst_table.rows[1][0]": "Carrot",
+  "menu.minez_help.thirst_table.rows[1][1]": "4",
+  "menu.minez_help.thirst_table.rows[1][2]": "3",
+  "menu.minez_help.thirst_table.rows[1][3]": "1",
+  "menu.minez_help.thirst_table.rows[1][4]": "+3",
+  "menu.minez_help.thirst_table.rows[1][5]": "Loot, Farm",
+  "menu.minez_help.thirst_table.rows[2][0]": "Melon Slice",
+  "menu.minez_help.thirst_table.rows[2][1]": "2",
+  "menu.minez_help.thirst_table.rows[2][2]": "1",
+  "menu.minez_help.thirst_table.rows[2][3]": "4",
+  "menu.minez_help.thirst_table.rows[2][4]": "+3",
+  "menu.minez_help.thirst_table.rows[2][5]": "Loot, Farm",
+  "menu.minez_help.thirst_table.rows[3][0]": "Beetroot",
+  "menu.minez_help.thirst_table.rows[3][1]": "1",
+  "menu.minez_help.thirst_table.rows[3][2]": "0.4",
+  "menu.minez_help.thirst_table.rows[3][3]": "6",
+  "menu.minez_help.thirst_table.rows[3][4]": "+2",
+  "menu.minez_help.thirst_table.rows[3][5]": "Loot, Farm",
+  "menu.minez_help.thirst_table.rows[4][0]": "x",
+  "menu.minez_help.thirst_table.rows[4][1]": "0",
+  "menu.minez_help.thirst_table.rows[4][2]": "0",
+  "menu.minez_help.thirst_table.rows[4][3]": "0",
+  "menu.minez_help.thirst_table.rows[4][4]": "0",
+  "menu.minez_help.thirst_table.rows[4][5]": "x",
+  "menu.minez_help.thirst_table.rows[5][0]": "x",
+  "menu.minez_help.thirst_table.rows[5][1]": "0",
+  "menu.minez_help.thirst_table.rows[5][2]": "0",
+  "menu.minez_help.thirst_table.rows[5][3]": "0",
+  "menu.minez_help.thirst_table.rows[5][4]": "0",
+  "menu.minez_help.thirst_table.rows[5][5]": "x",
+  "menu.minez_help.thirst_table.rows[6][0]": "x",
+  "menu.minez_help.thirst_table.rows[6][1]": "0",
+  "menu.minez_help.thirst_table.rows[6][2]": "0",
+  "menu.minez_help.thirst_table.rows[6][3]": "0",
+  "menu.minez_help.thirst_table.rows[6][4]": "0",
+  "menu.minez_help.thirst_table.rows[6][5]": "x",
+  "menu.minez_help.thirst_table.rows[7][0]": "x",
+  "menu.minez_help.thirst_table.rows[7][1]": "0",
+  "menu.minez_help.thirst_table.rows[7][2]": "0",
+  "menu.minez_help.thirst_table.rows[7][3]": "0",
+  "menu.minez_help.thirst_table.rows[7][4]": "0",
+  "menu.minez_help.thirst_table.rows[7][5]": "x",
+  "menu.minez_help.thirst_table.rows[8][0]": "x",
+  "menu.minez_help.thirst_table.rows[8][1]": "0",
+  "menu.minez_help.thirst_table.rows[8][2]": "0",
+  "menu.minez_help.thirst_table.rows[8][3]": "0",
+  "menu.minez_help.thirst_table.rows[8][4]": "0",
+  "menu.minez_help.thirst_table.rows[8][5]": "x",
+  "menu.minez_help.thirst_table.rows[9][0]": "x",
+  "menu.minez_help.thirst_table.rows[9][1]": "0",
+  "menu.minez_help.thirst_table.rows[9][2]": "0",
+  "menu.minez_help.thirst_table.rows[9][3]": "0",
+  "menu.minez_help.thirst_table.rows[9][4]": "0",
+  "menu.minez_help.thirst_table.rows[9][5]": "x",
+  "menu.minez_help.thirst_table.rows[10][0]": "x",
+  "menu.minez_help.thirst_table.rows[10][1]": "0",
+  "menu.minez_help.thirst_table.rows[10][2]": "0",
+  "menu.minez_help.thirst_table.rows[10][3]": "0",
+  "menu.minez_help.thirst_table.rows[10][4]": "0",
+  "menu.minez_help.thirst_table.rows[10][5]": "x",
+  "menu.minez_help.thirst_table.rows[11][0]": "x",
+  "menu.minez_help.thirst_table.rows[11][1]": "0",
+  "menu.minez_help.thirst_table.rows[11][2]": "0",
+  "menu.minez_help.thirst_table.rows[11][3]": "0",
+  "menu.minez_help.thirst_table.rows[11][4]": "0",
+  "menu.minez_help.thirst_table.rows[11][5]": "x",
+  "menu.minez_help.thirst_table.rows[12][0]": "x",
+  "menu.minez_help.thirst_table.rows[12][1]": "0",
+  "menu.minez_help.thirst_table.rows[12][2]": "0",
+  "menu.minez_help.thirst_table.rows[12][3]": "0",
+  "menu.minez_help.thirst_table.rows[12][4]": "0",
+  "menu.minez_help.thirst_table.rows[12][5]": "x",
+  "menu.minez_help.thirst_table.rows[13][0]": "x",
+  "menu.minez_help.thirst_table.rows[13][1]": "0",
+  "menu.minez_help.thirst_table.rows[13][2]": "0",
+  "menu.minez_help.thirst_table.rows[13][3]": "0",
+  "menu.minez_help.thirst_table.rows[13][4]": "0",
+  "menu.minez_help.thirst_table.rows[13][5]": "x",
+  "menu.minez_help.thirst_table.rows[14][0]": "x",
+  "menu.minez_help.thirst_table.rows[14][1]": "0",
+  "menu.minez_help.thirst_table.rows[14][2]": "0",
+  "menu.minez_help.thirst_table.rows[14][3]": "0",
+  "menu.minez_help.thirst_table.rows[14][4]": "0",
+  "menu.minez_help.thirst_table.rows[14][5]": "x",
+  "menu.minez_help.thirst_table.rows[15][0]": "x",
+  "menu.minez_help.thirst_table.rows[15][1]": "0",
+  "menu.minez_help.thirst_table.rows[15][2]": "0",
+  "menu.minez_help.thirst_table.rows[15][3]": "0",
+  "menu.minez_help.thirst_table.rows[15][4]": "0",
+  "menu.minez_help.thirst_table.rows[15][5]": "x",
+  "menu.minez_help.thirst_table.rows[16][0]": "x",
+  "menu.minez_help.thirst_table.rows[16][1]": "0",
+  "menu.minez_help.thirst_table.rows[16][2]": "0",
+  "menu.minez_help.thirst_table.rows[16][3]": "0",
+  "menu.minez_help.thirst_table.rows[16][4]": "0",
+  "menu.minez_help.thirst_table.rows[16][5]": "x",
+  "menu.minez_help.thirst_table.rows[17][0]": "x",
+  "menu.minez_help.thirst_table.rows[17][1]": "0",
+  "menu.minez_help.thirst_table.rows[17][2]": "0",
+  "menu.minez_help.thirst_table.rows[17][3]": "0",
+  "menu.minez_help.thirst_table.rows[17][4]": "0",
+  "menu.minez_help.thirst_table.rows[17][5]": "x",
+  "menu.minez_help.thirst_table.rows[18][0]": "x",
+  "menu.minez_help.thirst_table.rows[18][1]": "0",
+  "menu.minez_help.thirst_table.rows[18][2]": "0",
+  "menu.minez_help.thirst_table.rows[18][3]": "0",
+  "menu.minez_help.thirst_table.rows[18][4]": "0",
+  "menu.minez_help.thirst_table.rows[18][5]": "x",
+  "menu.minez_help.thirst_table.rows[19][0]": "x",
+  "menu.minez_help.thirst_table.rows[19][1]": "0",
+  "menu.minez_help.thirst_table.rows[19][2]": "0",
+  "menu.minez_help.thirst_table.rows[19][3]": "0",
+  "menu.minez_help.thirst_table.rows[19][4]": "0",
+  "menu.minez_help.thirst_table.rows[19][5]": "x",
+  "menu.minez_help.thirst_table.rows[20][0]": "x",
+  "menu.minez_help.thirst_table.rows[20][1]": "0",
+  "menu.minez_help.thirst_table.rows[20][2]": "0",
+  "menu.minez_help.thirst_table.rows[20][3]": "0",
+  "menu.minez_help.thirst_table.rows[20][4]": "0",
+  "menu.minez_help.thirst_table.rows[20][5]": "x",
+  "menu.minez_help.thirst_table.rows[21][0]": "x",
+  "menu.minez_help.thirst_table.rows[21][1]": "0",
+  "menu.minez_help.thirst_table.rows[21][2]": "0",
+  "menu.minez_help.thirst_table.rows[21][3]": "0",
+  "menu.minez_help.thirst_table.rows[21][4]": "0",
+  "menu.minez_help.thirst_table.rows[21][5]": "x",
+  "menu.minez_help.thirst_table.rows[22][0]": "x",
+  "menu.minez_help.thirst_table.rows[22][1]": "0",
+  "menu.minez_help.thirst_table.rows[22][2]": "0",
+  "menu.minez_help.thirst_table.rows[22][3]": "0",
+  "menu.minez_help.thirst_table.rows[22][4]": "0",
+  "menu.minez_help.thirst_table.rows[22][5]": "x",
+  "menu.minez_help.thirst_table.rows[23][0]": "x",
+  "menu.minez_help.thirst_table.rows[23][1]": "0",
+  "menu.minez_help.thirst_table.rows[23][2]": "0",
+  "menu.minez_help.thirst_table.rows[23][3]": "0",
+  "menu.minez_help.thirst_table.rows[23][4]": "0",
+  "menu.minez_help.thirst_table.rows[23][5]": "x",
+  "menu.minez_help.thirst_table.rows[24][0]": "x",
+  "menu.minez_help.thirst_table.rows[24][1]": "0",
+  "menu.minez_help.thirst_table.rows[24][2]": "0",
+  "menu.minez_help.thirst_table.rows[24][3]": "0",
+  "menu.minez_help.thirst_table.rows[24][4]": "0",
+  "menu.minez_help.thirst_table.rows[24][5]": "x",
+  "menu.minez_help.thirst_table.rows[25][0]": "x",
+  "menu.minez_help.thirst_table.rows[25][1]": "0",
+  "menu.minez_help.thirst_table.rows[25][2]": "0",
+  "menu.minez_help.thirst_table.rows[25][3]": "0",
+  "menu.minez_help.thirst_table.rows[25][4]": "0",
+  "menu.minez_help.thirst_table.rows[25][5]": "x",
+  "menu.minez_help.thirst_table.rows[26][0]": "x",
+  "menu.minez_help.thirst_table.rows[26][1]": "0",
+  "menu.minez_help.thirst_table.rows[26][2]": "0",
+  "menu.minez_help.thirst_table.rows[26][3]": "0",
+  "menu.minez_help.thirst_table.rows[26][4]": "0",
+  "menu.minez_help.thirst_table.rows[26][5]": "x",
+  "menu.minez_help.thirst_table.rows[27][0]": "x",
+  "menu.minez_help.thirst_table.rows[27][1]": "0",
+  "menu.minez_help.thirst_table.rows[27][2]": "0",
+  "menu.minez_help.thirst_table.rows[27][3]": "0",
+  "menu.minez_help.thirst_table.rows[27][4]": "0",
+  "menu.minez_help.thirst_table.rows[27][5]": "x",
+  "menu.minez_help.thirst_table.rows[28][0]": "x",
+  "menu.minez_help.thirst_table.rows[28][1]": "0",
+  "menu.minez_help.thirst_table.rows[28][2]": "0",
+  "menu.minez_help.thirst_table.rows[28][3]": "0",
+  "menu.minez_help.thirst_table.rows[28][4]": "0",
+  "menu.minez_help.thirst_table.rows[28][5]": "x"
 }
