--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -59,182 +59,187 @@
   "menu.minez_help.close": "Close",
   "menu.minez_help.thirst_table.headers[0]": "Item",
   "menu.minez_help.thirst_table.headers[1]": "Hunger",
-  "menu.minez_help.thirst_table.headers[2]": "Hunger",
+  "menu.minez_help.thirst_table.headers[2]": "Saturation",
   "menu.minez_help.thirst_table.headers[3]": "Stack",
   "menu.minez_help.thirst_table.headers[4]": "Thirst",
   "menu.minez_help.thirst_table.headers[5]": "Way of getting it",
+
   "menu.minez_help.thirst_table.rows[0][0]": "Apple",
   "menu.minez_help.thirst_table.rows[0][1]": "3",
   "menu.minez_help.thirst_table.rows[0][2]": "2",
   "menu.minez_help.thirst_table.rows[0][3]": "2",
   "menu.minez_help.thirst_table.rows[0][4]": "+2",
   "menu.minez_help.thirst_table.rows[0][5]": "Loot",
+
   "menu.minez_help.thirst_table.rows[1][0]": "Carrot",
   "menu.minez_help.thirst_table.rows[1][1]": "4",
   "menu.minez_help.thirst_table.rows[1][2]": "3",
   "menu.minez_help.thirst_table.rows[1][3]": "1",
   "menu.minez_help.thirst_table.rows[1][4]": "+3",
   "menu.minez_help.thirst_table.rows[1][5]": "Loot, Farm",
+
   "menu.minez_help.thirst_table.rows[2][0]": "Melon Slice",
   "menu.minez_help.thirst_table.rows[2][1]": "2",
   "menu.minez_help.thirst_table.rows[2][2]": "1",
   "menu.minez_help.thirst_table.rows[2][3]": "4",
   "menu.minez_help.thirst_table.rows[2][4]": "+3",
   "menu.minez_help.thirst_table.rows[2][5]": "Loot, Farm",
+
   "menu.minez_help.thirst_table.rows[3][0]": "Beetroot",
   "menu.minez_help.thirst_table.rows[3][1]": "1",
   "menu.minez_help.thirst_table.rows[3][2]": "0.4",
   "menu.minez_help.thirst_table.rows[3][3]": "6",
   "menu.minez_help.thirst_table.rows[3][4]": "+2",
   "menu.minez_help.thirst_table.rows[3][5]": "Loot, Farm",
-  "menu.minez_help.thirst_table.rows[4][0]": "x",
-  "menu.minez_help.thirst_table.rows[4][1]": "0",
-  "menu.minez_help.thirst_table.rows[4][2]": "0",
-  "menu.minez_help.thirst_table.rows[4][3]": "0",
+  "menu.minez_help.thirst_table.rows[4][0]": "Potato",
+  "menu.minez_help.thirst_table.rows[4][1]": "1",
+  "menu.minez_help.thirst_table.rows[4][2]": "0.6",
+  "menu.minez_help.thirst_table.rows[4][3]": "2",
   "menu.minez_help.thirst_table.rows[4][4]": "0",
-  "menu.minez_help.thirst_table.rows[4][5]": "x",
-  "menu.minez_help.thirst_table.rows[5][0]": "x",
-  "menu.minez_help.thirst_table.rows[5][1]": "0",
-  "menu.minez_help.thirst_table.rows[5][2]": "0",
-  "menu.minez_help.thirst_table.rows[5][3]": "0",
+  "menu.minez_help.thirst_table.rows[4][5]": "Loot",
+  "menu.minez_help.thirst_table.rows[5][0]": "Baked Potato",
+  "menu.minez_help.thirst_table.rows[5][1]": "5",
+  "menu.minez_help.thirst_table.rows[5][2]": "3.5",
+  "menu.minez_help.thirst_table.rows[5][3]": "2",
   "menu.minez_help.thirst_table.rows[5][4]": "0",
-  "menu.minez_help.thirst_table.rows[5][5]": "x",
-  "menu.minez_help.thirst_table.rows[6][0]": "x",
-  "menu.minez_help.thirst_table.rows[6][1]": "0",
-  "menu.minez_help.thirst_table.rows[6][2]": "0",
-  "menu.minez_help.thirst_table.rows[6][3]": "0",
+  "menu.minez_help.thirst_table.rows[5][5]": "Craft, Loot",
+  "menu.minez_help.thirst_table.rows[6][0]": "Bread",
+  "menu.minez_help.thirst_table.rows[6][1]": "7",
+  "menu.minez_help.thirst_table.rows[6][2]": "5.5",
+  "menu.minez_help.thirst_table.rows[6][3]": "3",
   "menu.minez_help.thirst_table.rows[6][4]": "0",
-  "menu.minez_help.thirst_table.rows[6][5]": "x",
-  "menu.minez_help.thirst_table.rows[7][0]": "x",
-  "menu.minez_help.thirst_table.rows[7][1]": "0",
-  "menu.minez_help.thirst_table.rows[7][2]": "0",
-  "menu.minez_help.thirst_table.rows[7][3]": "0",
+  "menu.minez_help.thirst_table.rows[6][5]": "Craft, Loot",
+  "menu.minez_help.thirst_table.rows[7][0]": "Cookie",
+  "menu.minez_help.thirst_table.rows[7][1]": "3",
+  "menu.minez_help.thirst_table.rows[7][2]": "1",
+  "menu.minez_help.thirst_table.rows[7][3]": "8",
   "menu.minez_help.thirst_table.rows[7][4]": "0",
-  "menu.minez_help.thirst_table.rows[7][5]": "x",
-  "menu.minez_help.thirst_table.rows[8][0]": "x",
-  "menu.minez_help.thirst_table.rows[8][1]": "0",
-  "menu.minez_help.thirst_table.rows[8][2]": "0",
-  "menu.minez_help.thirst_table.rows[8][3]": "0",
+  "menu.minez_help.thirst_table.rows[7][5]": "Craft, Loot",
+  "menu.minez_help.thirst_table.rows[8][0]": "Pumpkin Pie",
+  "menu.minez_help.thirst_table.rows[8][1]": "8",
+  "menu.minez_help.thirst_table.rows[8][2]": "10",
+  "menu.minez_help.thirst_table.rows[8][3]": "1",
   "menu.minez_help.thirst_table.rows[8][4]": "0",
-  "menu.minez_help.thirst_table.rows[8][5]": "x",
-  "menu.minez_help.thirst_table.rows[9][0]": "x",
-  "menu.minez_help.thirst_table.rows[9][1]": "0",
-  "menu.minez_help.thirst_table.rows[9][2]": "0",
-  "menu.minez_help.thirst_table.rows[9][3]": "0",
+  "menu.minez_help.thirst_table.rows[8][5]": "Craft, Loot",
+  "menu.minez_help.thirst_table.rows[9][0]": "Cake",
+  "menu.minez_help.thirst_table.rows[9][1]": "7 x 2",
+  "menu.minez_help.thirst_table.rows[9][2]": "7 x 1",
+  "menu.minez_help.thirst_table.rows[9][3]": "1",
   "menu.minez_help.thirst_table.rows[9][4]": "0",
-  "menu.minez_help.thirst_table.rows[9][5]": "x",
-  "menu.minez_help.thirst_table.rows[10][0]": "x",
-  "menu.minez_help.thirst_table.rows[10][1]": "0",
-  "menu.minez_help.thirst_table.rows[10][2]": "0",
-  "menu.minez_help.thirst_table.rows[10][3]": "0",
+  "menu.minez_help.thirst_table.rows[9][5]": "Loot, Spawn",
+  "menu.minez_help.thirst_table.rows[10][0]": "Golden Carrot",
+  "menu.minez_help.thirst_table.rows[10][1]": "6",
+  "menu.minez_help.thirst_table.rows[10][2]": "15",
+  "menu.minez_help.thirst_table.rows[10][3]": "1",
   "menu.minez_help.thirst_table.rows[10][4]": "0",
-  "menu.minez_help.thirst_table.rows[10][5]": "x",
-  "menu.minez_help.thirst_table.rows[11][0]": "x",
-  "menu.minez_help.thirst_table.rows[11][1]": "0",
-  "menu.minez_help.thirst_table.rows[11][2]": "0",
-  "menu.minez_help.thirst_table.rows[11][3]": "0",
-  "menu.minez_help.thirst_table.rows[11][4]": "0",
-  "menu.minez_help.thirst_table.rows[11][5]": "x",
-  "menu.minez_help.thirst_table.rows[12][0]": "x",
-  "menu.minez_help.thirst_table.rows[12][1]": "0",
-  "menu.minez_help.thirst_table.rows[12][2]": "0",
-  "menu.minez_help.thirst_table.rows[12][3]": "0",
+  "menu.minez_help.thirst_table.rows[10][5]": "Loot",
+  "menu.minez_help.thirst_table.rows[11][0]": "Golden Apple",
+  "menu.minez_help.thirst_table.rows[11][1]": "4",
+  "menu.minez_help.thirst_table.rows[11][2]": "3",
+  "menu.minez_help.thirst_table.rows[11][3]": "1",
+  "menu.minez_help.thirst_table.rows[11][4]": "+2",
+  "menu.minez_help.thirst_table.rows[11][5]": "Loot",
+  "menu.minez_help.thirst_table.rows[12][0]": "Raw Fish",
+  "menu.minez_help.thirst_table.rows[12][1]": "2",
+  "menu.minez_help.thirst_table.rows[12][2]": "1",
+  "menu.minez_help.thirst_table.rows[12][3]": "2",
   "menu.minez_help.thirst_table.rows[12][4]": "0",
-  "menu.minez_help.thirst_table.rows[12][5]": "x",
-  "menu.minez_help.thirst_table.rows[13][0]": "x",
-  "menu.minez_help.thirst_table.rows[13][1]": "0",
-  "menu.minez_help.thirst_table.rows[13][2]": "0",
-  "menu.minez_help.thirst_table.rows[13][3]": "0",
+  "menu.minez_help.thirst_table.rows[12][5]": "Fish, Loot",
+  "menu.minez_help.thirst_table.rows[13][0]": "Cooked Fish",
+  "menu.minez_help.thirst_table.rows[13][1]": "5",
+  "menu.minez_help.thirst_table.rows[13][2]": "5",
+  "menu.minez_help.thirst_table.rows[13][3]": "2",
   "menu.minez_help.thirst_table.rows[13][4]": "0",
-  "menu.minez_help.thirst_table.rows[13][5]": "x",
-  "menu.minez_help.thirst_table.rows[14][0]": "x",
-  "menu.minez_help.thirst_table.rows[14][1]": "0",
-  "menu.minez_help.thirst_table.rows[14][2]": "0",
-  "menu.minez_help.thirst_table.rows[14][3]": "0",
+  "menu.minez_help.thirst_table.rows[13][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[14][0]": "Raw Chicken",
+  "menu.minez_help.thirst_table.rows[14][1]": "2",
+  "menu.minez_help.thirst_table.rows[14][2]": "1",
+  "menu.minez_help.thirst_table.rows[14][3]": "1",
   "menu.minez_help.thirst_table.rows[14][4]": "0",
-  "menu.minez_help.thirst_table.rows[14][5]": "x",
-  "menu.minez_help.thirst_table.rows[15][0]": "x",
-  "menu.minez_help.thirst_table.rows[15][1]": "0",
-  "menu.minez_help.thirst_table.rows[15][2]": "0",
-  "menu.minez_help.thirst_table.rows[15][3]": "0",
+  "menu.minez_help.thirst_table.rows[14][5]": "Kill Chicken",
+  "menu.minez_help.thirst_table.rows[15][0]": "Cooked Chicken",
+  "menu.minez_help.thirst_table.rows[15][1]": "8",
+  "menu.minez_help.thirst_table.rows[15][2]": "8",
+  "menu.minez_help.thirst_table.rows[15][3]": "1",
   "menu.minez_help.thirst_table.rows[15][4]": "0",
-  "menu.minez_help.thirst_table.rows[15][5]": "x",
-  "menu.minez_help.thirst_table.rows[16][0]": "x",
-  "menu.minez_help.thirst_table.rows[16][1]": "0",
-  "menu.minez_help.thirst_table.rows[16][2]": "0",
-  "menu.minez_help.thirst_table.rows[16][3]": "0",
+  "menu.minez_help.thirst_table.rows[15][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[16][0]": "Raw Beef",
+  "menu.minez_help.thirst_table.rows[16][1]": "8",
+  "menu.minez_help.thirst_table.rows[16][2]": "8",
+  "menu.minez_help.thirst_table.rows[16][3]": "1",
   "menu.minez_help.thirst_table.rows[16][4]": "0",
-  "menu.minez_help.thirst_table.rows[16][5]": "x",
-  "menu.minez_help.thirst_table.rows[17][0]": "x",
-  "menu.minez_help.thirst_table.rows[17][1]": "0",
-  "menu.minez_help.thirst_table.rows[17][2]": "0",
-  "menu.minez_help.thirst_table.rows[17][3]": "0",
+  "menu.minez_help.thirst_table.rows[16][5]": "Kill Cow",
+  "menu.minez_help.thirst_table.rows[17][0]": "Cooked Beef",
+  "menu.minez_help.thirst_table.rows[17][1]": "8",
+  "menu.minez_help.thirst_table.rows[17][2]": "8",
+  "menu.minez_help.thirst_table.rows[17][3]": "1",
   "menu.minez_help.thirst_table.rows[17][4]": "0",
-  "menu.minez_help.thirst_table.rows[17][5]": "x",
-  "menu.minez_help.thirst_table.rows[18][0]": "x",
-  "menu.minez_help.thirst_table.rows[18][1]": "0",
-  "menu.minez_help.thirst_table.rows[18][2]": "0",
-  "menu.minez_help.thirst_table.rows[18][3]": "0",
+  "menu.minez_help.thirst_table.rows[17][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[18][0]": "Raw Mutton",
+  "menu.minez_help.thirst_table.rows[18][1]": "2",
+  "menu.minez_help.thirst_table.rows[18][2]": "1",
+  "menu.minez_help.thirst_table.rows[18][3]": "1",
   "menu.minez_help.thirst_table.rows[18][4]": "0",
-  "menu.minez_help.thirst_table.rows[18][5]": "x",
-  "menu.minez_help.thirst_table.rows[19][0]": "x",
-  "menu.minez_help.thirst_table.rows[19][1]": "0",
-  "menu.minez_help.thirst_table.rows[19][2]": "0",
-  "menu.minez_help.thirst_table.rows[19][3]": "0",
+  "menu.minez_help.thirst_table.rows[18][5]": "Kill Sheep",
+  "menu.minez_help.thirst_table.rows[19][0]": "Cooked Mutton",
+  "menu.minez_help.thirst_table.rows[19][1]": "8",
+  "menu.minez_help.thirst_table.rows[19][2]": "8",
+  "menu.minez_help.thirst_table.rows[19][3]": "1",
   "menu.minez_help.thirst_table.rows[19][4]": "0",
-  "menu.minez_help.thirst_table.rows[19][5]": "x",
-  "menu.minez_help.thirst_table.rows[20][0]": "x",
-  "menu.minez_help.thirst_table.rows[20][1]": "0",
-  "menu.minez_help.thirst_table.rows[20][2]": "0",
-  "menu.minez_help.thirst_table.rows[20][3]": "0",
+  "menu.minez_help.thirst_table.rows[19][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[20][0]": "Raw Porkchop",
+  "menu.minez_help.thirst_table.rows[20][1]": "2",
+  "menu.minez_help.thirst_table.rows[20][2]": "1",
+  "menu.minez_help.thirst_table.rows[20][3]": "1",
   "menu.minez_help.thirst_table.rows[20][4]": "0",
-  "menu.minez_help.thirst_table.rows[20][5]": "x",
-  "menu.minez_help.thirst_table.rows[21][0]": "x",
-  "menu.minez_help.thirst_table.rows[21][1]": "0",
-  "menu.minez_help.thirst_table.rows[21][2]": "0",
-  "menu.minez_help.thirst_table.rows[21][3]": "0",
+  "menu.minez_help.thirst_table.rows[20][5]": "Kill Pig",
+  "menu.minez_help.thirst_table.rows[21][0]": "Cooked Porkchop",
+  "menu.minez_help.thirst_table.rows[21][1]": "8",
+  "menu.minez_help.thirst_table.rows[21][2]": "8",
+  "menu.minez_help.thirst_table.rows[21][3]": "1",
   "menu.minez_help.thirst_table.rows[21][4]": "0",
-  "menu.minez_help.thirst_table.rows[21][5]": "x",
-  "menu.minez_help.thirst_table.rows[22][0]": "x",
-  "menu.minez_help.thirst_table.rows[22][1]": "0",
-  "menu.minez_help.thirst_table.rows[22][2]": "0",
-  "menu.minez_help.thirst_table.rows[22][3]": "0",
+  "menu.minez_help.thirst_table.rows[21][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[22][0]": "Raw Rabbit",
+  "menu.minez_help.thirst_table.rows[22][1]": "2",
+  "menu.minez_help.thirst_table.rows[22][2]": "1",
+  "menu.minez_help.thirst_table.rows[22][3]": "1",
   "menu.minez_help.thirst_table.rows[22][4]": "0",
-  "menu.minez_help.thirst_table.rows[22][5]": "x",
-  "menu.minez_help.thirst_table.rows[23][0]": "x",
-  "menu.minez_help.thirst_table.rows[23][1]": "0",
-  "menu.minez_help.thirst_table.rows[23][2]": "0",
-  "menu.minez_help.thirst_table.rows[23][3]": "0",
+  "menu.minez_help.thirst_table.rows[22][5]": "Kill Rabbit",
+  "menu.minez_help.thirst_table.rows[23][0]": "Cooked Rabbit",
+  "menu.minez_help.thirst_table.rows[23][1]": "8",
+  "menu.minez_help.thirst_table.rows[23][2]": "8",
+  "menu.minez_help.thirst_table.rows[23][3]": "1",
   "menu.minez_help.thirst_table.rows[23][4]": "0",
-  "menu.minez_help.thirst_table.rows[23][5]": "x",
-  "menu.minez_help.thirst_table.rows[24][0]": "x",
-  "menu.minez_help.thirst_table.rows[24][1]": "0",
-  "menu.minez_help.thirst_table.rows[24][2]": "0",
-  "menu.minez_help.thirst_table.rows[24][3]": "0",
-  "menu.minez_help.thirst_table.rows[24][4]": "0",
-  "menu.minez_help.thirst_table.rows[24][5]": "x",
-  "menu.minez_help.thirst_table.rows[25][0]": "x",
-  "menu.minez_help.thirst_table.rows[25][1]": "0",
-  "menu.minez_help.thirst_table.rows[25][2]": "0",
-  "menu.minez_help.thirst_table.rows[25][3]": "0",
-  "menu.minez_help.thirst_table.rows[25][4]": "0",
-  "menu.minez_help.thirst_table.rows[25][5]": "x",
-  "menu.minez_help.thirst_table.rows[26][0]": "x",
-  "menu.minez_help.thirst_table.rows[26][1]": "0",
-  "menu.minez_help.thirst_table.rows[26][2]": "0",
-  "menu.minez_help.thirst_table.rows[26][3]": "0",
-  "menu.minez_help.thirst_table.rows[26][4]": "0",
-  "menu.minez_help.thirst_table.rows[26][5]": "x",
-  "menu.minez_help.thirst_table.rows[27][0]": "x",
-  "menu.minez_help.thirst_table.rows[27][1]": "0",
-  "menu.minez_help.thirst_table.rows[27][2]": "0",
-  "menu.minez_help.thirst_table.rows[27][3]": "0",
-  "menu.minez_help.thirst_table.rows[27][4]": "0",
-  "menu.minez_help.thirst_table.rows[27][5]": "x",
-  "menu.minez_help.thirst_table.rows[28][0]": "x",
-  "menu.minez_help.thirst_table.rows[28][1]": "0",
-  "menu.minez_help.thirst_table.rows[28][2]": "0",
-  "menu.minez_help.thirst_table.rows[28][3]": "0",
-  "menu.minez_help.thirst_table.rows[28][4]": "0",
-  "menu.minez_help.thirst_table.rows[28][5]": "x"
+  "menu.minez_help.thirst_table.rows[23][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[24][0]": "Beetroot Soup",
+  "menu.minez_help.thirst_table.rows[24][1]": "6",
+  "menu.minez_help.thirst_table.rows[24][2]": "5",
+  "menu.minez_help.thirst_table.rows[24][3]": "1",
+  "menu.minez_help.thirst_table.rows[24][4]": "+10",
+  "menu.minez_help.thirst_table.rows[24][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[25][0]": "Mushroom Stew",
+  "menu.minez_help.thirst_table.rows[25][1]": "6",
+  "menu.minez_help.thirst_table.rows[25][2]": "7.2",
+  "menu.minez_help.thirst_table.rows[25][3]": "1",
+  "menu.minez_help.thirst_table.rows[25][4]": "+1",
+  "menu.minez_help.thirst_table.rows[25][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[26][0]": "Rabbit Stew",
+  "menu.minez_help.thirst_table.rows[26][1]": "14",
+  "menu.minez_help.thirst_table.rows[26][2]": "8",
+  "menu.minez_help.thirst_table.rows[26][3]": "1",
+  "menu.minez_help.thirst_table.rows[26][4]": "+1",
+  "menu.minez_help.thirst_table.rows[26][5]": "Craft",
+  "menu.minez_help.thirst_table.rows[27][0]": " ",
+  "menu.minez_help.thirst_table.rows[27][1]": " ",
+  "menu.minez_help.thirst_table.rows[27][2]": " ",
+  "menu.minez_help.thirst_table.rows[27][3]": " ",
+  "menu.minez_help.thirst_table.rows[27][4]": " ",
+  "menu.minez_help.thirst_table.rows[27][5]": " ",
+  "menu.minez_help.thirst_table.rows[28][0]": " ",
+  "menu.minez_help.thirst_table.rows[28][1]": " ",
+  "menu.minez_help.thirst_table.rows[28][2]": " ",
+  "menu.minez_help.thirst_table.rows[28][3]": " ",
+  "menu.minez_help.thirst_table.rows[28][4]": " ",
+  "menu.minez_help.thirst_table.rows[28][5]": " ",
+  "recipe.minez-help-menu.bread": "Bread Recipe"
 }
