--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -22,7 +22,7 @@
   "menu.minez_help.button12": "Dungeons",
   "menu.minez_help.button13": "Loot Chests",
   "menu.minez_help.button14": "Achievements",
-  "menu.minez_help.button15": "Lore",
+  "menu.minez_help.button15": "MineZ Lore",
   "menu.minez_help.pageback": "Previous page",
   "menu.minez_help.next": "Next page",
   "menu.minez_help.webmap": "MineZ Map",
