--- a/src/main/resources/assets/minez-help-menu/lang/en_us.json
+++ b/src/main/resources/assets/minez-help-menu/lang/en_us.json
@@ -3,7 +3,7 @@
   
   "key.minez_help_menu.open_gui": "Open Gui",
   "key.minez_help_menu.open_settings_gui": "Open Settings",
-  "key.minez_help_menu.toggle_dh": "Toggle Distant Horizons Render"
+  "key.minez_help_menu.toggle_dh": "Toggle Distant Horizons Render",
   
   "menu.minez_help.title": "MineZ Help Menu",
   "menu.minez_help.input_label": "Search for information:",
